--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="start-screen">
+    <div class="container">
         <h1>Swift Document Manager</h1>
-        <button id="document-btn">Create Document</button>
-        <button id="spreadsheet-btn">Create Spreadsheet</button>
+        <button id="createDoc">Create Document</button>
+        <button id="createSheet">Create Spreadsheet</button>
+        <input type="file" id="importFile" accept=".sdf" />
+        <script src="script.js"></script>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
